--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+/*---------------------------For DESKTOP view--------------------------*/
 .master-header-box{
   background-image:url(https://wallpapercave.com/dwp1x/wp4009916.png);
   background-size: cover;
@@ -183,8 +184,7 @@ padding-top: 15px;
     padding-bottom: 1em;
     left: 0;
     top: 0;
-    overflow-y: auto;
-    overflow-x:hidden;
+    overflow:auto hidden;
   }
 
   nav .nav-link-sub, .nav-link{
@@ -232,8 +232,7 @@ padding-top: 15px;
   #main-doc {
     position:fixed;
     display: block;
-    overflow-y: auto;
-    overflow-x: hidden;
+    overflow: auto hidden;
     left:28.5%;
     width:72.5%;
     z-index: 1;
@@ -304,123 +303,172 @@ padding-top: 15px;
 }
 
 /*---------------------------------For LANDSCAPE mobile view----------------------------*/
-@media screen and (min-width:320px) and (max-width: 480px) and (orientation:landscape)
+@media screen and (min-width:375px) and (max-width: 812px) and (orientation:landscape)
 {
 
-  #navbar {
-    display:block;
-    text-align: justify;
-    position: fixed;
-    width:29%;
-    height:98%;
-    margin: 1px 0;
-    padding-bottom: 1em;
-    left: 0;
+  .master-header-box{
+    background-image:url(https://wallpapercave.com/dwp1x/wp4009916.png);
+    background-size: cover;
+    height: fit-content;
+    display: inline-block;
     top: 0;
-    overflow-y: auto;
-    overflow-x:hidden;
-  }
-
-  nav .nav-link-sub, .nav-link{
-    display: inline-block; 
-  }
-
-  #navbar a {
-    font-style: normal;
-    font-size: 10px;
-    color: black;
-    text-indent: 2px;
-    text-align: start;
-  }
-
-  nav .nav-link{
-    padding-top: 5px;
-    padding-right: 2px;
-    margin: 6px 1px;
-    font-weight: bold;
-    text-align: left;
+    width:14.6em;
+    height: 8em;
+    margin-bottom: -0.3em;
+    background-size: 450px 150px;
+    background-position-x: 318px;
+    color:rgb(19, 140, 161);
   }
   
-  nav .nav-link-sub{
-    padding: 5px 0px 5px 10px;
-    text-align:left;
-    color: black;
-    font-weight: 500;
-  }
-
   details > summary {
-    list-style:none;
+   
+    list-style: none;
   }
   summary::-webkit-details-marker {
-    display: none;
+    display: none
   }
   
   summary::after {
     content: "+";
-  }
-
-  details[open] summary:after {
-    content: "-";   
-  }
-
-  #main-doc {
-    position:fixed;
-    display: block;
-    overflow-y: auto;
-    overflow-x: hidden;
-    left:28.5%;
-    width:72.5%;
-    z-index: 1;
-    max-height: 98vh;
-    margin-bottom: 1em;
-  }
-
-
-  ul > li, ol > li{
-    padding: 4px 4px;
-    line-height: 3vh;
-  }
-
-  .main-title {
-    display:block;
-    text-decoration: underline;
-    text-align: center;
-    color:black;
-    background-color:rgba(58, 51, 51, 0.372);
-    width:76%;
-    padding-top: 10px;
-    margin:auto;
-    font-size:20px;
-    }
-
-    .master-header-box{
-      font-size: large;
-      color:black;
-      text-align: center;
-      background-image: none;
-      background-color: aliceblue;
-      height: 1px;
-      visibility: hidden;
-    }
-
-    .divider-small{
-      display: block;
-      background-color:gray;
-      height: 3px;
-      margin-left: 6px;
-      width: 75px;
-    }
     
-    .divider-short{
-      background-color:gray;
-      display: block;
-      margin-left:8px;
-      height: 1px;
-      width:60px;
-    }
+  }
+  details[open] summary:after {
+    content: "—";
+  }
+  
+  nav .nav-link-sub, .nav-link{
+    display: inline-block; 
+  }
+  
+  nav .nav-link{
+    padding-top: 5px;
+    padding-right: 6px;
+    margin: 6px 3px;
+    font-weight: bold;
+  }
+  
+  nav .nav-link-sub{
+    padding: 5px 0px 5px 30px;
+  
+  }
+  
+  body{
+    width: 100vw;
+    background-image: url(https://img.freepik.com/free-vector/dark-gray-blurred-background_1034-243.jpg?w=740&t=st=1688166675~exp=1688167275~hmac=4b6caad70b8a21de31418ded7708b5ef6ea5a74ca15a843274151f2a05233872);
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+  }
+  
+  main {
+    position: fixed;
+    overflow:auto;
+    left:27%;
+    width:73%;
+    height: 99vh;
+    text-align: justify;
+    border-radius: 6px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    box-sizing: border-box;
+  }
+  
+  nav {
+    background-repeat: no-repeat;
+    background-size:cover;
+    background-position-x: center;
+    position:fixed;
+    height:100vh;
+    width:27%;
+    overflow-y:auto;
+    border-right: 6px solid rgba(107, 104, 103, 0.475);
+    background-color: rgba(173, 216, 230, 0.162);
+    top: 0;
+    left: 0;
+    overflow:auto hidden;
+  }
+  
+  #navbar a {font-style: normal;
+    font-size:1em;
+    text-decoration:none;
+    color: black;
+    text-indent: 6px;
+  }
 
-    hr {border: 3px solid grey;
-      width: 55vw;
-    }
-
+   .divider-small{
+    background-color:gray;
+    height: 3px;
+    width: 90%;
+    margin: 4px 6px;
+  }
+  
+  .divider-short{
+    background-color:gray;
+    display: block;
+    margin-left:1em;
+    height: 2px;
+    width:10em;
+  }
+  .highlight {font-weight: bold;}
+  
+  .color-highlight{color: rgb(3, 105, 3);}
+  
+  .gtk {
+    display: block;
+    width: fit-content;
+    padding-right: 100px;
+    margin: auto;
+    text-align: center;
+    padding-right: 5vw;
+  }
+  
+  ul > li, ol > li{
+    padding: 6px 4px;
+  }
+  
+  P, h1, h2, h3, h4 {
+    padding:0 10px 0 15px;
+  }
+  
+  p{
+    line-height: 2em;
+    text-indent: 10px;
+  }
+  
+  .main-title {
+  text-decoration: underline;
+  text-align: center;
+  color:black;
+  display: block;
+  background-color:rgba(58, 51, 51, 0.372);
+  height: 60px;
+  width:74vw;
+  padding-top: 10px;
+  margin-left: 6px;
+  font-size: 30px;
+  }
+  
+  code{
+    display:block;
+    background-color: rgba(160, 167, 173, 0.521);
+    width: 80%;
+    margin-left: 30px;
+    margin-top: -3vh;
+    margin-bottom: -1vh;
+    text-align: left;
+    padding-right: 7vw;
+    border-radius: 2px;
+    line-height: 2em;
+    overflow: auto hidden;
+  }
+  
+  hr {border: 3px solid grey;
+  width: 65vw;}
+  
+  header {
+  font-weight: bold;
+  font-size:21px;
+  text-indent: 15px;
+  padding-top: 15px;
+  }
 }
